Create general page structure.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
     <!-- Styling links -->
     <link rel="stylesheet" href="assets/styling/style.css">
   </head>
+
   <body>
-	<script src="index.js"></script>
+    <!-- Header section -->
+    <header>
+        Header
+    </header>
+    <!-- Main section -->
+    <main>
+        Maint Content
+    </main>
+    <!-- footer section -->
+    <footer>
+        Footer
+    </footer>
   </body>
 </html>
