adjusted padding on main to improve visibility.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <!-- Main section -->
     <main>
-        Maint Content
+        Main Content
     </main>
     <!-- footer section -->
     <footer>
