--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park.">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -17,10 +19,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Raleway:ital@0;1&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Raleway:ital@0;1&display=swap"
+        rel="stylesheet">
+</head>
 
-  <body>
+<body>
     <!-- Header section -->
     <header>
         <a href="index.html">
@@ -44,7 +47,13 @@
     </main>
     <!-- footer section -->
     <footer>
-        Footer
+        <ul>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)."><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
     </footer>
-  </body>
+
+    <script src="https://kit.fontawesome.com/b30a727321.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
