--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars" style="color: #3a3a3a;"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="#" class="active">Home</a></li>
@@ -49,7 +49,13 @@
     <footer>
         <ul>
             <li><a href="https://facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)."><i class="fa-brands fa-facebook"></i></a></li>
+                aria-label="Visit our Facebook page (opens in a new tab)."><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://x.com" target="_blank" rel="noopener"
+                aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+            <li><a href="https://youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our youtube channel (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
     </footer>
 
