styles footer section icons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <!-- footer section -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://facebook.com/" target="_blank" rel="noopener"
                 aria-label="Visit our Facebook page (opens in a new tab)."><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://x.com" target="_blank" rel="noopener"
