--- a/signup.html
+++ b/signup.html
@@ -35,9 +35,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars" style="color: #3a3a3a;"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
