--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </header>
     <!-- Main section -->
     <main>
-        Main Content
+        <section id="hero">
+            
+        </section>
     </main>
     <!-- footer section -->
     <footer>
