--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <p>18:30</p>
                 </div>
                 <div>
-                    <h3>>Urban <i class="fa-solid fa-city"></i></h3>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
                     <p>Friday</p>
                     <p>5K</p>
                     <p>The Market Hotel</p>
