--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars" style="color: #3a3a3a;"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
             </ul>
