--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,26 @@
     </header>
     <!-- Main section -->
     <main>
-        Main Content
+        <section id="signup">
+            <form action="https://formdump.codeinstitute.net" method="POST" id="signup-form">
+                <h2><i class="fa-solid fa-heart-pulse"> </i>Let's Get You Signed Up!</h2>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" required><br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" required><br>
+                <label for="email_address">Email Address</label>
+                <input type="text" name="email_address" id="email_address" required><br>
+                <!-- Radio buttons section -->
+                <label for="running_preference">Road</label>
+                <input type="radio" name="running_preference" id="road"><br>
+                <label for="running_preference">Trail</label>
+                <input type="radio" name="running_preference" id="trail"><br>
+                <label for="running_preference">Both</label>
+                <input type="radio" name="running_preference" id="both"><br>
+                <!-- submit button -->
+                <input type="submit" class="join-button" value="Let's Run!">
+            </form>
+        </section>
     </main>
     <!-- footer section -->
     <footer>
