--- a/signup.html
+++ b/signup.html
@@ -47,19 +47,23 @@
             <form action="https://formdump.codeinstitute.net" method="POST" id="signup-form">
                 <h2><i class="fa-solid fa-heart-pulse"> </i>Let's Get You Signed Up!</h2>
                 <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name" required><br>
+                <input type="text" name="first_name" id="first_name" class="text-input" required><br>
                 <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" id="last_name" required><br>
+                <input type="text" name="last_name" id="last_name" class="text-input" required><br>
                 <label for="email_address">Email Address</label>
-                <input type="text" name="email_address" id="email_address" required><br>
+                <input type="text" name="email_address" id="email_address" class="text-input" required><br>
+
                 <!-- Radio buttons section -->
+
                 <label for="running_preference">Road</label>
-                <input type="radio" name="running_preference" id="road"><br>
+                <input type="radio" name="running_preference" id="road" class="radio-buttons">
                 <label for="running_preference">Trail</label>
-                <input type="radio" name="running_preference" id="trail"><br>
+                <input type="radio" name="running_preference" id="trail" class="radio-buttons">
                 <label for="running_preference">Both</label>
-                <input type="radio" name="running_preference" id="both"><br>
+                <input type="radio" name="running_preference" id="both" class="radio-buttons">
+
                 <!-- submit button -->
+
                 <input type="submit" class="join-button" value="Let's Run!">
             </form>
         </section>
